<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gemptc.activities.Zq_zl_et4sentenceActivity" >
  <LinearLayout 
         android:id="@+id/lintop"
        style="@style/toplin"
         >
         <ImageView
            android:id="@+id/ivet4zlst"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back" />
         <TextView
             android:id="@+id/tvet4"
             android:text="句子"
             style="@style/toptext"
             />         
     </LinearLayout>
    <ScrollView 
        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/lintop"
             android:background="#e1e0de"
        >
         
         <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             android:background="@drawable/coner_bg"
             android:layout_marginTop="5dp"
            >
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence1" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence2" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence3" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence4" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         /> <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence5" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence6" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence7" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence8" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence9" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence10" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence11" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence12" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence13" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence14" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence15" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence16" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence17" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence18" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence19" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence20" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence21" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence22" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence23" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence24" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence25" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence26" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence27" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence28" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence29" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence30" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence31" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence32" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence33" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence34" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
         android:layout_margin="5dp"
        android:text="@string/sentence35" 
        android:textSize="18sp"     
         />
     <TextView 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:singleLine="false" 
        android:text="@string/sentence36" 
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
      <TextView 
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:scrollbars="vertical"
         android:singleLine="false"  
        android:layout_margin="5dp"
        android:textColor="#a76e48"
        android:textSize="18sp"     
         />
     </LinearLayout>
     </ScrollView>

</RelativeLayout>
